cloudformation/redis-cluster.json
{
  "Resources": {
    "SecurityGroupForPublicServiceVpcAndPrivateServiceVpc": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "security group for only allow ip from public service and private service vpc connect to redis cluster",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "CidrIp": "10.0.0.0/16",
            "ToPort": 6379,
            "FromPort": 6379
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": "10.1.0.0/16",
            "ToPort": 6379,
            "FromPort": 6379
          }
        ],
        "VpcId": {
          "Fn::ImportValue": "TetrisVpc-RedisClusterVpcId"
        }
      }
    },
    "SubnetGroupForRedisCluster": {
      "Type": "AWS::ElastiCache::SubnetGroup",
      "Properties": {
        "CacheSubnetGroupName": "redis-cluster-subnet-group",
        "Description": "subnet group for redis cluster",
        "SubnetIds": [
          {
            "Fn::ImportValue": "TetrisVpc-RedisClusterSubnet1Id"
          }
        ]
      }
    },
    "RedisCluster": {
      "Type": "AWS::ElastiCache::CacheCluster",
      "Properties": {
        "ClusterName": "tetris-redis",
        "Engine": "redis",
        "NumCacheNodes": 1,
        "CacheNodeType": "cache.t3.micro",
        "CacheSubnetGroupName": {
          "Ref": "SubnetGroupForRedisCluster"
        },
        "VpcSecurityGroupIds": [
          {
            "Ref": "SecurityGroupForPublicServiceVpcAndPrivateServiceVpc"
          }
        ]
      }
    }
  },
  "Outputs": {
    "RedisClusterName": {
      "Value": {
        "Ref": "RedisCluster"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-RedisCluster"
        }
      }
    },
    "RedisClusterAddress": {
      "Value": {
        "Fn::GetAtt": ["RedisCluster", "RedisEndpoint.Address"]
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-RedisClusterAddress"
        }
      }
    }
  }
}
